tests/mm0_mmu/fail/bad-sort41.mmu
-- free should be after pure
(sort s41 free pure)